Specify concrete async channel version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ repository = "https://github.com/Demiu/bevy_background_compute"
 
 [dependencies]
 # something with a dedicated oneshot channel would be ideal but bevy already has this as a dep
-async-channel = "*" 
+async-channel = "^1.4.2" 
 bevy_app = "0.8"
 bevy_ecs = "0.8"
 bevy_tasks = "0.8"
