--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,14 @@
 [package]
 name = "bevy_background_compute"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 description = "Bevy plugin for better task handling"
 license = "MIT"
 repository = "https://github.com/Demiu/bevy_background_compute"
+documentation = "https://docs.rs/bevy_background_compute"
+keywords = [
+    "bevy",
+]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
